[gd_scene load_steps=4 format=3 uid="uid://r8c442fx3mrq"]

[ext_resource type="Texture2D" uid="uid://cxmxgto47papc" path="res://assets/ui/ui.png" id="1_ew8qg"]
[ext_resource type="Script" uid="uid://hab7c11hh1o4" path="res://scenes/ui/w_item_tip.gd" id="1_fgmwh"]
[ext_resource type="Script" uid="uid://dtcsd8vn878vi" path="res://scenes/ui/label.gd" id="2_twqtx"]

[node name="w_item_tip" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_fgmwh")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_ew8qg")
region_rect = Rect2(17, 1, 14, 14)
patch_margin_left = 2
patch_margin_top = 3
patch_margin_right = 2
patch_margin_bottom = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="label_item_name" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 18
text = "道具名称最多八字"
script = ExtResource("2_twqtx")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 12
text = "道具简介"

[node name="label_des" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 15
text = "道具简介一大堆一大堆的所以然呢，我为何却说不出口"
autowrap_mode = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="w_attribute_set" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/w_attribute_set"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/w_attribute_set/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 12
text = "属性"

[node name="label_attributes" type="Label" parent="MarginContainer/VBoxContainer/w_attribute_set/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 15
text = "生命值???"
